Added all the images for the portfolio

--- a/portfolio-RachitManandhar/index.html
+++ b/portfolio-RachitManandhar/index.html
@@ -28,13 +28,13 @@
                 <div class="Buttons">
                     <div class="Button">
                         <a href="#Projects">
-                            <button class="BProject"><p class="BT">Projects</p><img src="https://github.com/sleepyydesu/website/blob/master/projectsIcon.png?raw=true" height="32px"></button>
+                            <button class="BProject"><p class="BT">Projects</p><img src="images/projectsIcon.png" height="32px"></button>
                         </a>
                     </div>
                 </div>
             </div>
             <div class="Image">
-                <img src="https://github.com/BokuWaSleepyyDesu/website/blob/master/me.png?raw=true" height="440px">
+                <img src="images/me.png" height="440px">
             </div>
         </div>
     </section>
@@ -47,7 +47,7 @@
                 <div class="PBox">
                     <a href="https://weatherapp.rachitmanandhar.com.np">
                         <div class="PIcon">
-                            <img src="https://github.com/sleepyydesu/website/blob/master/weatherIcon.png?raw=true" height="400px" style="margin-top: -50px;">
+                            <img src="images/weatherIcon.png" height="400px" style="margin-top: -50px;">
                         </div>
                         <div class="PTitleDiv">
                             <p class="PTitle">Weather App</p>
@@ -57,7 +57,7 @@
                 <div class="PBox">
                     <a href="https://movieapp.rachitmanandhar.com.np">
                         <div class="PIcon">
-                            <img src="https://github.com/sleepyydesu/website/blob/master/movieIcon.png?raw=true" height="196px" style="margin-top: 50px;">
+                            <img src="images/movieIcon.png" height="196px" style="margin-top: 50px;">
                         </div>
                         <div class="PTitleDiv" style="margin-top: 100px;">
                             <p class="PTitle">Movie App</p>
@@ -73,9 +73,9 @@
                 <h1>Connect with me:</h1>
                 <p>Satisfied with me? Please contact me</p>
                 <div class="links">
-                    <a href="https://facebook.com/sleepyydesu"><img src="https://github.com/sleepyydesu/website/blob/master/facebook.png?raw=true"></a>
-                    <a href="https://instagram.com/sleepyydesu"><img src="https://github.com/sleepyydesu/website/blob/master/Instagram.png?raw=true"></a>
-                    <a href="mailto:rachit2063@gmail.com"><img src="https://github.com/sleepyydesu/website/blob/master/mail.png?raw=true"></a>
+                    <a href="https://facebook.com/sleepyydesu"><img src="images/facebook.png"></a>
+                    <a href="https://instagram.com/sleepyydesu"><img src="images/Instagram.png"></a>
+                    <a href="mailto:rachit2063@gmail.com"><img src="images/mail.png"></a>
                 </div>
             </div>
             <div class="Cform">
@@ -94,9 +94,9 @@
             <div class="FText">
                 <p>@2025 Rachit Manandhar</p>
                 <div class="Flinks">
-                    <a href="https://facebook.com/sleepyydesu"><img src="https://github.com/sleepyydesu/website/blob/master/facebook.png?raw=true"></a>
-                    <a href="https://instagram.com/sleepyydesu"><img src="https://github.com/sleepyydesu/website/blob/master/Instagram.png?raw=true"></a>
-                    <a href="mailto:rachit2063@gmail.com"><img src="https://github.com/sleepyydesu/website/blob/master/mail.png?raw=true"></a>
+                    <a href="https://facebook.com/sleepyydesu"><img src="images/facebook.png"></a>
+                    <a href="https://instagram.com/sleepyydesu"><img src="images/Instagram.png"></a>
+                    <a href="mailto:rachit2063@gmail.com"><img src="images/mail.png"></a>
                 </div>
             </div>
         </div>
