Added Media queries and icon

--- a/portfolio-RachitManandhar/index.html
+++ b/portfolio-RachitManandhar/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Portfolio</title>
     <link rel="stylesheet" href="css/style.css">
+    <link rel="icon" href="images/me.png">
 </head>
 <body>
     <header>
@@ -71,7 +72,7 @@
         <div class="Contact">
             <div class="Ctext">
                 <h1>Connect with me:</h1>
-                <p>Satisfied with me? Please contact me</p>
+                <p>Satisfied with me? <span id="mbr"><br></span>Please contact me</p>
                 <div class="links">
                     <a href="https://facebook.com/sleepyydesu"><img src="images/facebook.png"></a>
                     <a href="https://instagram.com/sleepyydesu"><img src="images/Instagram.png"></a>
